--- a/references.bib
+++ b/references.bib
@@ -64,3 +64,21 @@ URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
     pages = {1--29},
     url = {http://www.jstatsoft.org/v40/i01/},
   }
+
+  @Manual{acs,
+    title = {acs: Download, manipulate, and present data from the US Census
+American Community Survey},
+    author = {Ezra Haber Glenn},
+    year = {2014},
+    note = {R package version 1.2},
+    url = {http://CRAN.R-project.org/package=acs},
+  }
+
+  @Manual{ggmap,
+    title = {ggmap: A package for spatial visualization with Google Maps and
+OpenStreetMap},
+    author = {David Kahle and Hadley Wickham},
+    year = {2013},
+    note = {R package version 2.3},
+    url = {http://CRAN.R-project.org/package=ggmap},
+  }
